# projeto_digi_python

./: .env  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  DOCUMENTACAO.md  README.md  SECURITY.md  bot.js  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  squarecloud.app
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py  dados.py  requirements.txt
db/migrations/: 001_create_historico_digi.sql  002_harden_api_data.sql  003_match_documents_hybrid.sql  004_match_documents_hybrid_id.sql
docs/: HISTORY_FEATURE.md  MELHORIAS_SKILLS.md  RAG_IMPLEMENTATION.md
evals/: .gitignore  dataset.jsonl  detectar_instabilidade.py  run_eval.py  seed_from_supabase.py
evals/reports/: 2026-07-15-2357.json  2026-07-15-2357.md  2026-07-17-1035.json  2026-07-17-1035.md  2026-07-17-1423.json  2026-07-17-1423.md  instabilidade-2026-07-19-1501.json  instabilidade-2026-07-19-1501.md  instabilidade-2026-07-21-1116.json  instabilidade-2026-07-21-1116.md
sql/: analytics_views.sql  duvidas_respondidas.sql  historico_digi.sql  historico_digi_v2_feedback.sql  historico_digi_v3_indexes.sql
src/: app.py  config.py  logger.py
src/agents/: base.py  classifier.py  formatter_agent.py  rag_agent.py  scope_validator.py
src/api/: auth.py  dependencies.py  history_routes.py  ingest_routes.py  rag_routes.py
src/models/: schemas.py
src/pipeline/: rag_pipeline.py
src/services/: chunker.py  (+4 more)
tests/: conftest.py  fakes.py  test_app.py  test_config.py  test_dashboard_dados.py  test_eval_dataset.py  test_eval_runner.py  test_instabilidade.py
(+11 files in other folders)
