[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "digi-rag-api"
version = "2.0.0"
description = "Secure RAG API for Digisac support analysts"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "mistralai==2.6.0",
  "openai==2.45.0",
  "pydantic-settings==2.14.2",
  "pydantic==2.13.4",
  "pymupdf==1.28.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.32",
  "sentry-sdk[fastapi]==2.65.0",
  "supabase==2.31.0",
  "uvicorn==0.51.0",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", ".venv2"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "RUF"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
exclude = '(^|/)(tests|\.venv|\.venv2)/'

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".venv2"]
skips = ["B104"]
